# tams-research-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  app.py  config.py  docker-compose.yml  memory.md  requirements.txt
.claude/: settings.json
.streamlit/: config.toml
.taskmaster/: state.json
assets/: style.css  tam_template.pptx  tam_template_ar.pptx
auth/: __init__.py  email_verify.py  login.py  rbac.py
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/analysis/: base.py  compiler.py  earnings.py  esg.py  insider_activity.py  peer_comparison.py  sector_rotation.py
backend/app/api/: analysis.py  auth.py  chat.py  exports.py  market_data.py  reports.py  router.py
backend/app/core/: database.py  middleware.py  security.py  storage.py
backend/app/data/: data_cache.py  news_search.py  source_collector.py  yahoo_finance.py
backend/app/generators/: docx_generator.py  pptx_generator.py
backend/app/models/: __init__.py  chat_message.py  chat_session.py  report.py  report_file.py  report_section.py  report_snapshot.py  report_source.py  share_link.py  tenant.py  user.py
backend/app/schemas/: analysis.py  auth.py  chat.py  market_data.py  report.py
backend/app/tasks/: analysis_tasks.py  celery_app.py
data/: activity_tracker.py  alert_engine.py  alert_rules_ui.py  audit_logger.py  chart_generator.py  data_layer.py  dcf_model.py  financial_viewer.py  interactive_charts.py  market_data.py  market_monitor.py  migrate_json_to_supabase.py  peer_benchmark.py  portfolio.py  predictive_signals.py  (+13 more)
(+121 files in other folders)
