[project]
name = "tam-research-agent"
version = "1.0.0"
description = "TAM Capital Research & Reporting Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "anthropic>=0.40",
    "yfinance>=0.2.30",
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
    "matplotlib>=3.8",
    "duckduckgo-search>=4.0",
    "weasyprint>=62",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
